fix: remove extra spaces from shimmer footer for mobile view  and fix broken balance on address page for mobile view

--- a/client/src/app/components/footer/ShimmerFooter.scss
+++ b/client/src/app/components/footer/ShimmerFooter.scss
@@ -114,6 +114,10 @@ footer {
         margin-bottom: 24px;
         border: 0;
         border-top: 1px solid rgba(255, 255, 255, 0.12);
+
+        @include phone-down {
+          display: none;
+        }
       }
 
       .foundation-data {
@@ -166,7 +170,14 @@ footer {
             }
           }
         }
+        @include phone-down {
+          position: absolute;
+          left: 20px;
+        }
       }
+    }
+    @include phone-down {
+      min-height: 1200px;
     }
   }
 
